# pyconjp2025-camp-tutorial-single-no-validation-3

./: .gitignore  LICENSE  README.md  main.py  memo.md  models.py  pyproject.toml  searchapi.py  tutorial.md
tests/: conftest.py  test_main.py  test_searchapi.py
